--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-I wrote this program as the "applied" part of my senior thesis on tree visualization.
+I wrote this program as the "applied" part of my senior project on tree visualization.
 Even though I wrote it as a student, someone may find the tree positioning code useful.
 
 see src/about.txt for more info
